# midi

source/: CMakeLists.txt  main.c
source/MidiManager/: MidiManager.c  MidiManager.h
source/dependencies/: delay.c  delay.h
